examples/15.istio-on-gke/cloudsql/postgres/egress_to_cloudsql.yaml
---
# Disable mTLS to the CloudSQL instance
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: postgres-cloud-sql-instance
  namespace: istio-workload
spec:
  host: 35.224.127.4
  trafficPolicy:
    tls:
      mode: DISABLE

---
# Add the CloudSQL's external IP to the mesh
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: postgres-cloud-sql-instance
  namespace: istio-workload
spec:
  hosts:
    # although blog article says that `hosts` field is ignored for TCP service entries,
    # clients fail to establish connection when `hosts` is omitted,
    # namely "curl: (56) Recv failure: Connection reset by peer"
    #
    # use `gcloud sql instances list` to find out the IP address of your Google Cloud Instance
    - 35.224.127.4
  addresses:
    # use `gcloud sql instances list` to find out the IP address of your Google Cloud Instance
    - 35.224.127.4/32 # a block of IPs in CIDR notation
  ports:
    - name: tcp
      number: 3307 # at the moment, Google Cloud SQL always available on port 3307
      protocol: tcp # enable TCP traffic
  location: MESH_EXTERNAL
