examples/15.istio-on-gke/cloudsql/postgres/standalone.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-cloudsql-proxy
  namespace: istio-workload
  labels:
    app: postgres-cloudsql-proxy
    version: v1
spec:
  containers:
    # [START proxy_container]
    - name: cloudsql-proxy
      image: gcr.io/cloudsql-docker/gce-proxy:latest
      command:
        [
          "/cloud_sql_proxy",
          "--dir=/cloudsql",
          "-instances=nmiu-play:us-central1:memegen-db=tcp:0.0.0.0:5432",
          "-credential_file=/secrets/cloudsql/cloudsqlclient.json",
        ]
      volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
        - name: cloudsql
          mountPath: /cloudsql
    # [END proxy_container]
  # [START volumes]
  volumes:
    - name: cloudsql-instance-credentials
      secret:
        secretName: cloudsql-instance-credentials
    - name: cloudsql
      emptyDir:
  # [END volumes]

---
kind: Service
apiVersion: v1
metadata:
  name: postgres-cloudsql-proxy
  namespace: istio-workload
spec:
  selector:
    app: postgres-cloudsql-proxy
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432

# ---
# apiVersion: authentication.istio.io/v1alpha1
# kind: Policy
# metadata:
#   name: postgres-cloudsql-proxy-policy
# spec:
#   targets:
#     - name: postgres-cloudsql-proxy

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: postgres-cloudsql-proxy
  namespace: istio-workload
spec:
  host: postgres-cloudsql-proxy
  trafficPolicy:
    tls:
      mode: DISABLE

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: postgres-cloudsql-proxy
  namespace: istio-workload
spec:
  gateways:
    - mesh
  hosts:
    - postgres-cloudsql-proxy
  tcp:
    - match:
        - port: 5432
      route:
        - destination:
            host: postgres-cloudsql-proxy
            port:
              number: 5432

---
apiVersion: v1
kind: Pod
metadata:
  name: postgres-toolbox-standalone
  namespace: istio-workload
spec:
  containers:
    - image: gcr.io/nmiu-play/toolbox
      imagePullPolicy: Always
      name: toolbox
      resources:
        limits:
          cpu: 500m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 128Mi
